2015-07-03  Nenad Vukicevic  <nenad@intrepid.com>

	* portals4/gupcr_nb.upc (upc_memset_nb, upc_memset_nbi): Complete
	upc_memset() with upc fence.  Otherwise it will not be completed by
	the non-blocking sync functions.

2015-05-18  Gary Funck  <gary@intrepid.com>

	* configure.ac: Set minimum automake version to 1.11.6.
	* aclocal.m4, configure, Makefile.in, testsuite/Makefile.in:
	Re-generate with automake 1.11.6.

2015-04-30  Nenad Vukicevic  <nenad@intrepid.com>

	* portals4/gupcr_nb_sup.c (gupc_nb_put/get): Fix bug. Increment
	number of outstanding implicit transfers.

2014-11-01  Nenad Vukicevic  <nenad@intrepid.com>

	* portals4/gupcr_gmem.c (gupc_gmem_get): Advance remote offset
	if more then one PtlGet() are executed.

2014-08-15  Nenad Vukicevic  <nenad@intrepid.com>

	* portals4/gupcr_mem.c (upc_memcpy): Make sure outstanding
	strict puts are completed before transferring data from
	the remote node as local thread can have an outstanding
	memory put to the same location.

2014-08-01  Gary Funck  <gary@intrepid.com>

	* configure.ac (GUPCR_PORTALS_RUNTIME): New AC_DEFINE().
	* config.h.in: Re-generate.
	* configure: Re-generate.
	* libgupc.spec.in: Fix comment.
	* testsuite/lib/libgupc-dg.exp
	(libgupc_load): Simplify logic.
	(upc_run_cmd): Rename from run_command.
	(upc_portals): Use newly added GUPCR_PORTALS_RUNTIME config. variable.
	(upc_runtime_yod): Make compile-only.
	* testsuite/lib/libgupc.exp: Bring in line with gomp's libgomp.exp.
	(libgupc_target_compile): Simplify logic.
	* testsuite/libgupc.upc/upc.exp:
	Bring in line with gomp's libgomp.c/c.exp.
	* testsuite/libgupc.upc/intrepid/test07.upc
	* testsuite/libgupc.upc/intrepid/test07_sep.upc
	* testsuite/libgupc.upc/intrepid/test08.upc
	* testsuite/libgupc.upc/intrepid/test08_sep.upc
	Add dg-options to properly support separate compilation.

2014-07-16  Nenad Vukicevic  <nenad@intrepid.com>

	* portals4/gupcr_lock.upc (upc_lock): Add upc_fence to flush